[tool.poetry]
name = "SMC-POMDP"
version = "0.1.0"
description = ""
authors = ["Chenyang Wu"]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"
tensorboard = "^2.3.0"
numpy = "^1.21.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
matplotlib = "^3.4.2"
memory-profiler = "^0.58.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
